@@ -18,6 +18,7 @@ package org.apache.lucene.search.spans;
  */
 
 import org.apache.lucene.index.IndexReader;
+import org.apache.lucene.index.Term;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.util.ToStringUtils;
 
@@ -49,13 +50,7 @@ public class SpanNotQuery extends SpanQuery implements Cloneable {
 
   public String getField() { return include.getField(); }
 
-  /** Returns a collection of all terms matched by this query.
-   * @deprecated use extractTerms instead
-   * @see #extractTerms(Set)
-   */
-  public Collection getTerms() { return include.getTerms(); }
-  
-  public void extractTerms(Set terms) { include.extractTerms(terms); }
+  public void extractTerms(Set<Term> terms) { include.extractTerms(terms); }
 
   public String toString(String field) {
     StringBuilder buffer = new StringBuilder();
