@@ -26,6 +26,7 @@ import java.util.Iterator;
 import java.util.Set;
 
 import org.apache.lucene.index.IndexReader;
+import org.apache.lucene.index.Term;
 import org.apache.lucene.util.PriorityQueue;
 import org.apache.lucene.util.ToStringUtils;
 import org.apache.lucene.search.Query;
@@ -58,21 +59,7 @@ public class SpanOrQuery extends SpanQuery implements Cloneable {
 
   public String getField() { return field; }
 
-  /** Returns a collection of all terms matched by this query.
-   * @deprecated use extractTerms instead
-   * @see #extractTerms(Set)
-   */
-  public Collection getTerms() {
-    Collection terms = new ArrayList();
-    Iterator i = clauses.iterator();
-    while (i.hasNext()) {
-      SpanQuery clause = (SpanQuery)i.next();
-      terms.addAll(clause.getTerms());
-    }
-    return terms;
-  }
-  
-  public void extractTerms(Set terms) {
+  public void extractTerms(Set<Term> terms) {
     Iterator i = clauses.iterator();
     while (i.hasNext()) {
       SpanQuery clause = (SpanQuery)i.next();
